--- a/buildroot-external/configs/snapos_rpi3_defconfig
+++ b/buildroot-external/configs/snapos_rpi3_defconfig
@@ -7,7 +7,7 @@ BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_9=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
-BR2_TARGET_GENERIC_ROOT_PASSWD="raspberry"
+BR2_TARGET_GENERIC_ROOT_PASSWD="snapcast"
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi3/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi3/post-image.sh"
@@ -19,16 +19,17 @@ BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="7dc3bd00d62130ef7f09759a8c0ec9d65f58c987"
 BR2_LINUX_KERNEL_DEFCONFIG="bcm2709"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-cm3"
-BR2_PACKAGE_ALSA_UTILS=y
-BR2_PACKAGE_ALSA_UTILS_AMIXER=y
-BR2_PACKAGE_ALSA_UTILS_APLAY=y
+#BR2_PACKAGE_ALSA_UTILS=y
+#BR2_PACKAGE_ALSA_UTILS_AMIXER=y
+#BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_RPI_BT_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
-BR2_PACKAGE_RPI_USERLAND=y
+#BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_DROPBEAR=y
-BR2_PACKAGE_WIRELESS_TOOLS=y
+#BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_SNAPCAST=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
