--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -1,3 +1,4 @@
 source "$BR2_EXTERNAL_SNAPOS_PATH/package/snapcast/Config.in"
 source "$BR2_EXTERNAL_SNAPOS_PATH/package/aixlog/Config.in"
+source "$BR2_EXTERNAL_SNAPOS_PATH/package/jsonrpcpp/Config.in"
 source "$BR2_EXTERNAL_SNAPOS_PATH/package/popl/Config.in"
