--- a/buildroot-external/configs/snapos_rpi3_defconfig
+++ b/buildroot-external/configs/snapos_rpi3_defconfig
@@ -6,6 +6,8 @@ BR2_CCACHE_DIR="$(HOME)/.ccache"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_9=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_TARGET_GENERIC_HOSTNAME="snapcast"
+BR2_TARGET_GENERIC_ISSUE="Welcome to Snapcast"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="snapcast"
 BR2_SYSTEM_DHCP="eth0"
