--- a/buildroot-external/package/snapcast/Config.in
+++ b/buildroot-external/package/snapcast/Config.in
@@ -5,6 +5,7 @@ config BR2_PACKAGE_SNAPCAST
 	select BR2_PACKAGE_AIXLOG
 	select BR2_PACKAGE_JSONRPCPP
 	select BR2_PACKAGE_POPL
+	select BR2_PACKAGE_ASIO
 	help
 	  Synchronous multi-room audio player
 	  
