--- a/buildroot-external/configs/snapos_rpi_defconfig
+++ b/buildroot-external/configs/snapos_rpi_defconfig
@@ -10,7 +10,7 @@ BR2_TARGET_GENERIC_ISSUE="Welcome to Snapcast"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="snapcast"
 BR2_SYSTEM_DHCP="eth0"
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi/post-build.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_SNAPOS_PATH)/board/raspberrypi/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPOS_PATH)/board/raspberrypi/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="--add-wlan0 --add-audio --speedup-boot --raise-volume"
 BR2_LINUX_KERNEL=y
