--- a/openwrt/snapcast/Makefile
+++ b/openwrt/snapcast/Makefile
@@ -14,8 +14,7 @@ PKG_USE_MIPS16 := 0
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/badaix/snapcast.git
-PKG_SOURCE_VERSION:=a3f309e0da291dcbec14520f4f8f44a739184ddf
-#v0.12.0
+PKG_SOURCE_VERSION:=v0.13.0
 PKG_BUILD_DIR:=$(BUILD_DIR)/snapcast-$(PKG_VERSION)
 PKG_BUILD_DEPENDS := asio popl aixlog
 
