add snap-mpd package

--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -2,3 +2,4 @@ source "$BR2_EXTERNAL_SNAPOS_PATH/package/snapcast/Config.in"
 source "$BR2_EXTERNAL_SNAPOS_PATH/package/aixlog/Config.in"
 source "$BR2_EXTERNAL_SNAPOS_PATH/package/popl/Config.in"
 source "$BR2_EXTERNAL_SNAPOS_PATH/package/asio/Config.in"
+source "$BR2_EXTERNAL_SNAPOS_PATH/package/snap-mpd/Config.in"
