Remove dependency on Avahi
If Avahi is installed, Snapcast will benefit from it automatically. But
depending on it draws in DBus as well and blows up the image.

--- a/openwrt/snapcast/Makefile
+++ b/openwrt/snapcast/Makefile
@@ -25,7 +25,7 @@ define Package/snapcast/Default
 	SECTION := multimedia
 	CATEGORY := Multimedia
 	TITLE := snapcast
-	DEPENDS := +libstdcpp +libavahi-client +libatomic +libogg +libflac
+	DEPENDS := +libstdcpp +libatomic +libogg +libflac
 endef
 
 define Package/snapcast/description/Default
