--- a/openwrt/snapcast/Makefile
+++ b/openwrt/snapcast/Makefile
@@ -8,13 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME := snapcast
-PKG_VERSION := 0.18.1
+PKG_VERSION := 0.19.0
 PKG_RELEASE := $(PKG_SOURCE_VERSION)
 PKG_USE_MIPS16 := 0
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/badaix/snapcast.git
-PKG_SOURCE_VERSION:=v0.18.1
+PKG_SOURCE_VERSION:=0de2bbde36a14b44e2d76f259569d55fb12fb60a
 PKG_BUILD_DIR:=$(BUILD_DIR)/snapcast-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
@@ -54,7 +54,7 @@ endef
 define Package/snapclient
 	$(call Package/snapcast/Default)
 	TILE += Snapclient
-	DEPENDS += +AUDIO_SUPPORT:alsa-lib +libvorbisidec
+	DEPENDS += +AUDIO_SUPPORT:alsa-lib +libvorbisidec +libsoxr
 	HIDDEN := 1
 endef
 
