--- a/openwrt/snapcast/Makefile
+++ b/openwrt/snapcast/Makefile
@@ -8,13 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME := snapcast
-PKG_VERSION := 0.19.0
+PKG_VERSION := 0.20.0
 PKG_RELEASE := $(PKG_SOURCE_VERSION)
 PKG_USE_MIPS16 := 0
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/badaix/snapcast.git
-PKG_SOURCE_VERSION:=0de2bbde36a14b44e2d76f259569d55fb12fb60a
+PKG_SOURCE_VERSION:=v0.20.0
 PKG_BUILD_DIR:=$(BUILD_DIR)/snapcast-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
@@ -82,7 +82,7 @@ define Package/snapcast/config
 			prompt "Snapclient"
 			help
 				Snapcast client
-			default n
+			default y
 	endmenu
 endef
 
