--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -22,9 +22,11 @@ jobs:
           - os: ubuntu-latest
             arch: "amd64"
             image_prefix: "debian:"
+            image_suffix: ""
           - os: self-hosted-rpi4
             arch: "armhf"
-            image_prefix: "navikey/raspbian-"
+            image_prefix: "badaix/raspios-"
+            image_suffix: "-armhf-lite"
         exclude:
           - os: self-hosted-rpi4
             image: "bookworm"
@@ -32,10 +34,12 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     container:
-      image: ${{matrix.image_prefix}}${{matrix.image}}
+      image: ${{matrix.image_prefix}}${{matrix.image}}${{matrix.image_suffix}}
     steps:
     - name: Get dependencies
       run: apt-get update && apt-get install -yq wget debhelper build-essential cmake git rename libatomic1 libasound2-dev libsoxr-dev libvorbisidec-dev libvorbis-dev libflac-dev libopus-dev alsa-utils libpulse-dev libavahi-client-dev avahi-daemon libexpat1-dev
+      env:
+        DEBIAN_FRONTEND: noninteractive
     - name: Checkout
       uses: actions/checkout@v2
       with:
