Use environment variable for boost version

--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -2,11 +2,14 @@ name: deb
 
 on: [push, pull_request]
 
+env:
+  BOOST_VERSION: 1_79_0
+
 jobs:
   deb:
 
     env:
-      VERSION: '0.26.0'
+      VERSION: 0.26.0
 
     strategy:
       fail-fast: false
@@ -57,17 +60,19 @@ jobs:
       id: cache-boost
       uses: actions/cache@v2
       with:
-        path: boost_1_78_0
+        path: boost_1_79_0
         key: ${{ runner.os }}-boost
     - name: Get boost
       if: steps.cache-boost.outputs.cache-hit != 'true'
-      run: wget https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.tar.bz2 && tar xjf boost_1_78_0.tar.bz2
+      run: |
+        wget https://boostorg.jfrog.io/artifactory/main/release/1.79.0/source/boost_1_79_0.tar.bz2
+        tar xjf boost_1_79_0.tar.bz2
     - name: Create deb package
       run: |
-        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_1_78_0 -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }} -DBUILD_WITH_PULSE=OFF" binary
+        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_1_79_0 -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }} -DBUILD_WITH_PULSE=OFF" binary
         rename 's/_${{ matrix.arch }}/_without-pulse_${{ matrix.arch }}/g' ../snapclient*_${{ matrix.arch }}.deb
         fakeroot make -f debian/rules clean
-        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_1_78_0 -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }}" binary
+        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_1_79_0 -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }}" binary
     - name: Archive artifacts
       uses: actions/upload-artifact@v2
       with:
