--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -2,8 +2,10 @@ name: mac
 
 on: [push, pull_request]
 
-jobs:
+env:
+  BOOST_VERSION: 1_79_0
 
+jobs:
   mac:
 
     env:
@@ -33,11 +35,13 @@ jobs:
       id: cache-boost
       uses: actions/cache@v2
       with:
-        path: boost_1_78_0
+        path: boost_${{ env.BOOST_VERSION }}
         key: ${{ runner.os }}-boost
     - name: Get boost
       if: steps.cache-boost.outputs.cache-hit != 'true'
-      run: wget https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.tar.bz2 && tar xjf boost_1_78_0.tar.bz2
+      run: |
+        wget https://boostorg.jfrog.io/artifactory/main/release/${BOOST_VERSION//_/.}/source/boost_${BOOST_VERSION}.tar.bz2
+        tar xjf boost_${BOOST_VERSION}.tar.bz2
     - name: Cache ccache
       id: cache-ccache
       uses: actions/cache@v2
@@ -48,6 +52,6 @@ jobs:
     #- name: ccache dump config
     #  run: ccache -p
     - name: cmake build
-      run: cmake -S $GITHUB_WORKSPACE/src/snapcast -B build -DBOOST_ROOT=$GITHUB_WORKSPACE/boost_1_78_0 -DCMAKE_BUILD_TYPE=Release -DWERROR=ON -DBUILD_TESTS=ON -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_FLAGS="-I/usr/local/include -Wno-deprecated-declarations"
+      run: cmake -S $GITHUB_WORKSPACE/src/snapcast -B build -DBOOST_ROOT=$GITHUB_WORKSPACE/boost_${BOOST_VERSION} -DCMAKE_BUILD_TYPE=Release -DWERROR=ON -DBUILD_TESTS=ON -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_FLAGS="-I/usr/local/include -Wno-deprecated-declarations"
     - name: cmake make
       run: cmake --build build --parallel 3
