--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -9,7 +9,7 @@ jobs:
   mac:
 
     env:
-      VERSION: 0.26.0
+      VERSION: v0.26.0
 
     strategy:
       fail-fast: false
@@ -21,11 +21,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Checkout Snapcast
+      uses: actions/checkout@v2
       with:
-        submodules: recursive
-    - name: Checkout tag
-      if: ${{ env.VERSION != '0.0.0' }}
-      run: git -C $GITHUB_WORKSPACE/src/snapcast/ checkout v${{ env.VERSION }}
+        repository: badaix/snapcast
+        path: src/snapcast
+        ref: ${{ env.VERSION }}
     - name: Setup environment
       run: |
         echo "SHA=$(git -C $GITHUB_WORKSPACE/src/snapcast rev-parse HEAD)" >> $GITHUB_ENV
