--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -6,18 +6,19 @@ jobs:
   win:
 
     env:
-      VERSION: 0.26.0
+      VERSION: v0.26.0
 
     runs-on: windows-2019
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Checkout Snapcast
+      uses: actions/checkout@v2
       with:
-        submodules: recursive
-    - name: Checkout tag
-      if: ${{ env.VERSION != '0.0.0' }}
-      run: git -C ${{github.workspace}}/src/snapcast/ checkout v${{ env.VERSION }}
+        repository: badaix/snapcast
+        path: src/snapcast
+        ref: ${{ env.VERSION }}
     - name: Setup environment
       run: |
         echo "SHA=$(git -C ${{github.workspace}}/src/snapcast rev-parse HEAD)" >> $env:GITHUB_ENV
