Create debian changelog from changelog.md file

--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -40,7 +40,7 @@ jobs:
       image: ${{matrix.image_prefix}}${{matrix.image}}${{matrix.image_suffix}}
     steps:
     - name: Get dependencies
-      run: apt-get update && apt-get install -yq wget debhelper build-essential cmake git rename libatomic1 libasound2-dev libsoxr-dev libvorbisidec-dev libvorbis-dev libflac-dev libopus-dev alsa-utils libpulse-dev libavahi-client-dev avahi-daemon libexpat1-dev
+      run: apt-get update && apt-get install -yq wget debhelper build-essential cmake git rename libatomic1 libasound2-dev libsoxr-dev libvorbisidec-dev libvorbis-dev libflac-dev libopus-dev alsa-utils libpulse-dev libavahi-client-dev avahi-daemon libexpat1-dev python3
       env:
         DEBIAN_FRONTEND: noninteractive
     - name: Checkout
@@ -51,6 +51,10 @@ jobs:
         repository: badaix/snapcast
         path: src/snapcast
         ref: ${{ env.VERSION }}
+    - name: Create changelog
+      run: |
+        $GITHUB_WORKSPACE/scripts/changelog_md2deb.py $GITHUB_WORKSPACE/src/snapcast/changelog.md > $GITHUB_WORKSPACE/debian/changelog
+        cat $GITHUB_WORKSPACE/debian/changelog
     - name: Setup environment
       run: |
         echo "SHA=$(git -C $GITHUB_WORKSPACE/src/snapcast rev-parse HEAD)" >> $GITHUB_ENV
