--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -64,7 +64,6 @@ jobs:
         cat $GITHUB_WORKSPACE/debian/changelog
     - name: Setup environment
       run: |
-        echo "ref: ${{ github.event.client_payload.ref }}, sha: ${{ github.event.client_payload.sha }}"
         echo "SHA=$(git -C $GITHUB_WORKSPACE/src/snapcast rev-parse HEAD)" >> $GITHUB_ENV
         echo "PARENT_DIR=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
     - name: Clean up
@@ -73,20 +72,19 @@ jobs:
       id: cache-boost
       uses: actions/cache@v2
       with:
-        path: boost_${{ env.BOOST_VERSION }}
+        path: boost_1_81_0
         key: ${{ runner.os }}-boost
     - name: Get boost
       if: steps.cache-boost.outputs.cache-hit != 'true'
       run: |
-        echo "https://boostorg.jfrog.io/artifactory/main/release/${{ env.BOOST_VERSION//_/. }}/source/boost_${{ env.BOOST_VERSION }}.tar.bz2"
-        wget https://boostorg.jfrog.io/artifactory/main/release/${BOOST_VERSION//_/.}/source/boost_${{ env.BOOST_VERSION }}.tar.bz2
-        tar xjf boost_${{ env.BOOST_VERSION }}.tar.bz2
+        wget https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.tar.bz2
+        tar xjf boost_1_81_0.tar.bz2
     - name: Create deb package
       run: |
-        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_${{ env.BOOST_VERSION }} -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }} -DBUILD_WITH_PULSE=OFF" binary
+        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_1_81_0 -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }} -DBUILD_WITH_PULSE=OFF" binary
         rename 's/_${{ matrix.arch }}/_without-pulse_${{ matrix.arch }}/g' ../snapclient*_${{ matrix.arch }}.deb
         fakeroot make -f debian/rules clean
-        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_${{ env.BOOST_VERSION }} -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }}" binary
+        fakeroot make -f debian/rules CMAKEFLAGS="-DBOOST_ROOT=$GITHUB_WORKSPACE/boost_1_81_0 -DCMAKE_BUILD_TYPE:STRING=Release -DREVISION=${{ env.SHA }}" binary
     - name: Archive artifacts
       uses: actions/upload-artifact@v2
       with:
