--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -66,7 +66,8 @@ jobs:
       run: |
         echo "SHA=$(git -C $GITHUB_WORKSPACE/src/snapcast rev-parse HEAD)" >> $GITHUB_ENV
         echo "PARENT_DIR=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
-        echo "BOOST_DOT_VERSION=${BOOST_VERSION//_/.}" >> $GITHUB_ENV
+        BOOST_DOT_VERSION = $(echo ${BOOST_VERSION} | sed 's/_/./g')
+        echo "BOOST_DOT_VERSION=$BOOST_DOT_VERSION" >> $GITHUB_ENV
         echo "BOOST=boost_${BOOST_VERSION}" >> $GITHUB_ENV
         echo "BOOST_DOT_VERSION: ${{env.BOOST_DOT_VERSION}}"
         echo "BOOST: ${{env.BOOST}}"
