Run on manual dispatch

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -3,7 +3,7 @@ name: package
 on: 
   repository_dispatch:
     types: build-success
-  workflow_dispatch
+  workflow_dispatch:
   push:
     branches:
     - develop
